--- a/css/style.css
+++ b/css/style.css
@@ -7,27 +7,27 @@
 }
 @font-face {
     font-family: 'Geomanist';
-    src: url(../fonts/geomanist-regular-webfont.ttf);
+    src: url(../Fonts/geomanist-regular-webfont.ttf);
 }
 @font-face {
     font-family: 'Meccanica';
-    src: url(../fonts/meccanica-regular.otf);
+    src: url(../Fonts/meccanica-regular.otf);
 }
 @font-face {
     font-family: 'Neue';
-    src: url(../fonts/NeueMachina-Regular.otf);
+    src: url(../Fonts/NeueMachina-Regular.otf);
 }
 @font-face {
     font-family: 'Phage';
-    src: url(../fonts/Phage\ Regular.otf);
+    src: url(../Fonts/Phage\ Regular.otf);
 }
 @font-face {
     font-family: 'Sansburg';
-    src: url(../fonts/Sansburg.ttf);
+    src: url(../Fonts/Sansburg.ttf);
 }
 @font-face {
     font-family: 'JustR';
-    src: url(../fonts/JustR.otf);
+    src: url(../Fonts/JustR.otf);
 }
 @keyframes abajo-anim{
     0%{
@@ -131,7 +131,9 @@ header nav ul li a:hover{
     display: flex;
     gap: 10px;
 }
-.deslizar span{
+.deslizar img{
+    width: 50px;
+    filter: invert(100%);
     animation: abajo-anim 1.6s infinite;
 }
 .home-bang{
@@ -535,12 +537,22 @@ footer{
         font-family: 'Phage';
         display: block;
     }
+    .deslizar img{
+        width: 35px;
+        height: 35px;
+        filter: invert(100%);
+        animation: abajo-anim 1.6s infinite;
+    }
     .home-presentacion{
         padding: 20px;
         text-align: center;
     }
     .home-presentacion span{
         margin-bottom: 30%;
+    }
+    .home-presentacion-h1{
+        top: 34%;
+        text-align: center;
     }
     .home-bang, .home-razzbar, .home-waspe{
         height: 200%;
@@ -578,13 +590,13 @@ footer{
         top: 100%;
     }
     .ventana[data-ventana="2"]{
-        top: 132%;
+        top: 120%;
     }
     .ventana[data-ventana="3"]{
         top: 160%;
     }
     .ventana[data-ventana="4"]{
-        top: 190%;
+        top: 210%;
     }
     .ventana[data-ventana="5"]{
         top: 240%;
@@ -594,6 +606,15 @@ footer{
     }
     .ventana[data-ventana="7"]{
         top: 320%;
+    }
+    .ventana[data-ventana="8"]{
+        top: 350%;
+    }
+    .ventana[data-ventana="9"]{
+        top: 385%;
+    }
+    .ventana[data-ventana="10"]{
+        top: 430%;
     }
     .ventana-fondo, .ventana-fondo-1{
         height: 700px;
@@ -614,31 +635,31 @@ footer{
         z-index: 3;
     }
     .ventana-1[data-ventana-1="1"]{
-        top: 370%;
+        top: 480%;
     }
     .ventana-1[data-ventana-1="2"]{
-        top: 410%;
+        top: 520%;
     }
     .ventana-1[data-ventana-1="3"]{
-        top: 450%;
+        top: 580%;
     }
     .ventana-1[data-ventana-1="4"]{
-        top: 490%;
+        top: 620%;
     }
     .ventana-1[data-ventana-1="5"]{
-        top: 530%;
-    }
-    .ventana-1[data-ventana-1="6"]{
-        top: 570%;
-    }
-    .ventana-1[data-ventana-1="7"]{
-        top: 610%;
-    }
-    .ventana-1[data-ventana-1="8"]{
         top: 650%;
     }
+    .ventana-1[data-ventana-1="6"]{
+        top: 680%;
+    }
+    .ventana-1[data-ventana-1="7"]{
+        top: 720%;
+    }
+    .ventana-1[data-ventana-1="8"]{
+        top: 750%;
+    }
     .ventana-1[data-ventana-1="9"]{
-        top: 690%;
+        top: 810%;
     }
     .proximamente{
         height: 480%;
