--- a/css/style.css
+++ b/css/style.css
@@ -674,6 +674,7 @@ footer{
         animation: abajo-anim 1.6s infinite;
     }
     .home-presentacion{
+        margin-top: -10%;
         height: 120vh;
         padding: 20px;
         text-align: center;
@@ -700,8 +701,8 @@ footer{
         position: fixed;
         top: 50%; 
         left: 50%;
-        width: 100%; 
-        height: 100%;
+        width: 90%; 
+        height: 90%;
         background: rgba(0, 0, 0, 0.845);
         justify-content: center;
         align-items: center;
@@ -750,8 +751,8 @@ footer{
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 90%;
+        height: 90%;
         display: none;
         justify-content: center;
         align-items: center;
@@ -776,8 +777,8 @@ footer{
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 90%;
+        height: 90%;
         display: none;
         justify-content: center;
         align-items: center;
