--- a/css/style.css
+++ b/css/style.css
@@ -674,7 +674,7 @@ footer{
     filter: invert(100%);
 }
 /* --- Responsive: móvil --- */
-@media (max-width: 410px) {
+@media (max-width: 430px) {
     body, html{
         overflow-x: hidden;
         margin: 0;
@@ -700,7 +700,7 @@ footer{
         animation: abajo-anim 1.6s infinite;
     }
     .home-presentacion{
-        margin-top: -10%;
+        margin-top: -40%;
         height: 120vh;
         padding: 20px;
         text-align: center;
@@ -736,7 +736,7 @@ footer{
     }
     .ventana{
         display: none;
-        width: 90%; 
+        width: 100%; 
         height: 90%;
         background: rgba(0, 0, 0, 0.845);
         justify-content: center;
@@ -745,6 +745,7 @@ footer{
     }
     .ventana.show{
         display: flex;
+        overflow-y: hidden;
         position: fixed;
         top: 5%;
     }
@@ -754,93 +755,102 @@ footer{
         background-color: rgb(32, 32, 32);
     }
     .descripcion-bang, .descripcion-razzbar, .descripcion-vopk{
-        width: 100%;
+        width: 100% !important;
         text-align: center;
-        left: 65%;
-        top: 60%;
+        position: absolute !important;
+        left: 63.5% !important;
+        top: 67% !important;
         transform: translate(-50%, -50%);
     }
     .comprar-link, .comprar-link-1{
-        left: 17%;
+        position: absolute;
+        left: 14% !important;
         top: 80%;
-        padding: 15px 75px;
+        padding: 12px 40px;
+        z-index: 9999;
+        font-size: 16px;
+    }
+    .comprar-link-1{
+        position: absolute;
+        left: 1%;
+        top: 10%;
+        padding: 15px 15px;
+        z-index: 9999;
     }
     .descripcion-bang h2, .descripcion-razzbar h2, .descripcion-vopk h2{
-        font-size: 20px;
+        font-size: 15px !important;
+        
     }
     .descripcion-bang p, .descripcion-razzbar p, .descripcion-vopk p{
-        font-size: 15px;
+        font-size: 12px !important;
     }
     .ventana img, .ventana-1 img, .ventana-2 img{
-        width: 300px;
+        position: absolute;
+        width: 250px !important;
         left: 50%;
         top: 25%;
         transform: translate(-50%, -50%);
     }
     .cerrar-ventana{
         font-size: 20px;
-        left: 50%;
-        top: 4%;
-        transform: translate(-50%, -50%);
-        padding: 5px 50px;
+        left: 75% !important;
+        top: 0% !important;
+        padding: 5px 30px;
     }
     .ventana-1{
-        position: fixed;
-        top: 5%;
-        left: 0%;
-        width: 90%;
-        height: 90%;
         display: none;
+        width: 100%; 
+        height: 90%;
+        background: rgba(0, 0, 0, 0.845);
         justify-content: center;
         align-items: center;
         z-index: 1000;
-        background-color: rgb(32, 32, 32);
-    }
-    .ventana-fondo-1{
-        width: 90%;
-        max-width: 400px;
-        height: auto;
-        background-color: rgb(32, 32, 32);
-        padding: 20px;
-        border-radius: 10px;
     }
     .ventana-1.show{
         display: flex;
+        overflow-y: hidden;
+        position: fixed;
+        top: 5%;
+    }
+    .ventana-fondo-1{
+        width: 90%;
+        height: 900px;
+        background-color: rgb(32, 32, 32);
     }
     .descripcion-razzbar h2{
         width: 70%;
     }
     .ventana-2{
-        width: 90%;
-        height: 90%;
         display: none;
+        width: 100%; 
+        height: 90%;
+        background: rgba(0, 0, 0, 0.845);
         justify-content: center;
         align-items: center;
         z-index: 1000;
-        background-color: rgb(32, 32, 32);
-    }
-    .ventana-fondo-2{
-        width: 90%;
-        max-width: 400px;
-        height: auto;
-        background-color: rgb(32, 32, 32);
-        padding: 20px;
-        border-radius: 10px;
     }
     .ventana-2.show{
         display: flex;
+        overflow-y: hidden;
         position: fixed;
         top: 5%;
-        left: 0%;
     }
-    .descripcion-vopk h2{
-        width: 70%;
-        background-color: red;
+    .ventana-fondo-2{
+        width: 90%;
+        height: 900px;
+        background-color: rgb(32, 32, 32);
+    }
+    .agotado{
+        position: absolute;
+        top: 805% !important;
+        height: 420%;
+        z-index: 10000;
     }
     .proximamente{
+        top: 1237%;
         display: flex;
         flex-direction: column;
-        gap: 1000px;
+        gap: 700px;
         height: 411%;
         position: absolute;
         left: 0;
